@@ -13,6 +13,15 @@ namespace AjModel
         {
         }
 
+        public Model(Type domain)
+        {
+            foreach (Type type in GetListTypes(domain)) 
+            {
+                Type model = typeof(EntityModel<>);
+                this.entityModels.Add((EntityModel) Activator.CreateInstance(model.MakeGenericType(type)));
+            }
+        }
+
         public IEnumerable<EntityModel> EntityModels
         {
             get
@@ -31,9 +40,40 @@ namespace AjModel
             return this.entityModels.Where(em => em.Name == name).FirstOrDefault();
         }
 
-        public EntityModel GetEntityModel<T>()
+        public EntityModel<T> GetEntityModel<T>()
         {
-            return this.entityModels.Where(em => em.Type == typeof(T)).FirstOrDefault();
+            return (EntityModel<T>) this.entityModels.Where(em => em.Type == typeof(T)).FirstOrDefault();
+        }
+
+        private static IEnumerable<Type> GetListTypes(Type type)
+        {
+            foreach (var property in type.GetProperties())
+            {
+                if (property.PropertyType.IsInterface && property.PropertyType.IsGenericType)
+                {
+                    var types = property.PropertyType.GetGenericArguments();
+                    if (types.Length != 1)
+                        break;
+                    yield return types[0];
+                    continue;
+                }
+
+                foreach (var propertyInterface in property.PropertyType.GetInterfaces())
+                {
+                    if (!propertyInterface.IsGenericType)
+                        continue;
+
+                    if (propertyInterface.Name != "IList`1")
+                        continue;
+
+                    var types = propertyInterface.GetGenericArguments();
+
+                    if (types.Length != 1)
+                        continue;
+
+                    yield return types[0];
+                }
+            }
         }
     }
 }
